# Search-Engine-Model-Qt

./: CMakeLists.txt  Document.cpp  Document.h  README.md  Service.cpp  Service.h  documents.txt  gui.cpp  gui.h  gui.ui  main.cpp
